Fix Navbar scroll issue in mobile & showing submenu when nav bar collapsed

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -143,6 +143,13 @@
   margin-left: 8px;
   padding: 3px;
 }
+.ant-menu-submenu-popup {
+  background-color: #ffffff !important;
+}
+
+.ant-menu-submenu-popup .ant-menu-item {
+  color: #000000 !important;
+}
 
 .other_function {
   display: flex;
@@ -652,6 +659,11 @@ a {
 
 .custom-overflow-y::-webkit-scrollbar-track {
   background-color: transparent;
+}
+
+.sider-overflow-y {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 @media (min-width: 768px) {
